<resources>
    <string name="app_name">Password Generator</string>
    <string name="label_main_password">Main password</string>
    <string name="label_site">Site/Application Name</string>
    <string name="button_copy_password">Copy</string>
    <string name="label_result">Result</string>
    <string name="label_login">Login</string>
    <string name="check_save_password">Save Main Password</string>
    <string name="label_algorithm">Algorithm</string>
    <string-array name="algorithm_array">
        <item>SHA3-256</item>
        <item>SHA-256</item>
        <item>SHA-512</item>
        <item>SHA-1</item>
        <item>MD5</item>
    </string-array>
    <string name="check_lowercase">Lowercase</string>
    <string name="check_uppercase">Uppercase</string>
    <string name="check_digits">Digits</string>
    <string name="check_spec_symbols">Special Symbols</string>
    <string name="text_length">Password Length</string>
    <string name="hint_optional">optional</string>
    <string name="text_symbols">Symbols</string>
    <string name="toast_result_copied">Result copied</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_skip">Skip</string>
    <string name="text_guide1">Step 1. Enter main password.</string>
    <string name="text_guide2">Step 2. Enter site or app name.</string>
    <string name="text_guide3">Result will be generated automatically.</string>
    <string name="button_lets_go">Let\'s go!</string>
    <string name="text_extensions">Browser Extensions</string>
    <string name="text_guide0">Weclome to Constant Password Generator! To skip this guide click top right button.</string>
    <string name="image_app_icon_description">Application Icon</string>
    <string name="full_app_name">Constant PassGen</string>
</resources>
