<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/editMainPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxSavePassword"
            app:layout_constraintStart_toStartOf="@+id/textMainPassword"
            app:layout_constraintTop_toBottomOf="@+id/textMainPassword" />

    <EditText
            android:id="@+id/editSite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editMainPassword"
            app:layout_constraintStart_toStartOf="@+id/editMainPassword"
            app:layout_constraintTop_toBottomOf="@+id/textSite" />

    <EditText
            android:id="@+id/editLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_optional"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editSite"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editMainPassword"
            app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <TextView
            android:id="@+id/textMainPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_main_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <TextView
            android:id="@+id/textSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_site"
            app:layout_constraintStart_toStartOf="@+id/editMainPassword"
            app:layout_constraintTop_toBottomOf="@+id/editMainPassword" />

    <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_login"
            app:layout_constraintStart_toStartOf="@+id/editSite"
            app:layout_constraintTop_toBottomOf="@+id/editSite" />

    <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_result"
            app:layout_constraintStart_toStartOf="@+id/editLogin"
            app:layout_constraintTop_toBottomOf="@+id/editLogin" />

    <EditText
            android:id="@+id/editResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:editable="false"
            android:ems="10"
            android:inputType="text"
            android:singleLine="false"
            app:layout_constraintEnd_toEndOf="@+id/editLogin"
            app:layout_constraintStart_toStartOf="@+id/editLogin"
            app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <CheckBox
            android:id="@+id/checkBoxSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_save_password"
            app:layout_constraintBottom_toBottomOf="@+id/editMainPassword"
            app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
            android:id="@+id/checkBoxHideSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_hide_site"
            app:layout_constraintBottom_toBottomOf="@+id/editSite"
            app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
            android:id="@+id/checkBoxHideLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_hide_login"
            app:layout_constraintBottom_toBottomOf="@+id/editLogin"
            app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
            android:id="@+id/checkBoxHideResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/check_hide_result"
            app:layout_constraintBottom_toBottomOf="@+id/editResult"
            app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_settings_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/buttonCopyPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/button_copy_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editResult"
            app:layout_constraintTop_toBottomOf="@+id/editResult" />

</android.support.constraint.ConstraintLayout>