<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GuideActivity">

    <Button
            android:id="@+id/buttonSkip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/century_gothic"
            android:textSize="20sp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSkip" />

    <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_app_icon_description"
            android:src="@drawable/ic_icon_without_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <TextView
            android:id="@+id/textMainPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/century_gothic"
            android:text="@string/label_main_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editMainPasswordLayout" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/editMainPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/century_gothic"
            android:textColorHint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textMainPassword"
            app:layout_constraintTop_toTopOf="@+id/textDescription" >

        <EditText
                android:id="@+id/editMainPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/century_gothic"
                android:inputType="none"
                android:text="MainPassword"
                android:enabled="false"
                android:textColor="@android:color/black" />


    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/textSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_gothic"
            android:text="@string/label_site"
            app:layout_constraintStart_toStartOf="@+id/editMainPasswordLayout"
            app:layout_constraintTop_toTopOf="@+id/editSiteLayout" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/editSiteLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:textColorHint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textSite"
            app:layout_constraintTop_toBottomOf="@+id/editMainPasswordLayout">

        <EditText
                android:id="@+id/editSite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/century_gothic"
                android:inputType="none"
                android:text="example.com"
                android:enabled="false"
                android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century_gothic"
            android:text="@string/label_result"
            app:layout_constraintStart_toStartOf="@+id/editResultLayout"
            app:layout_constraintTop_toTopOf="@+id/editResultLayout" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/editResultLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/century_gothic"
            android:textColorHint="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/editSiteLayout"
            app:layout_constraintStart_toStartOf="@+id/editSiteLayout"
            app:layout_constraintTop_toBottomOf="@+id/editSiteLayout">

        <EditText
                android:id="@+id/editResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/century_gothic"
                android:inputType="none"
                android:text="5cpd398m"
                android:enabled="false"
                android:textColor="@android:color/black" />


    </android.support.design.widget.TextInputLayout>


    <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:background="@drawable/rect_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonBack"
            tools:visibility="visible" />

    <Button
            android:id="@+id/buttonNext"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:background="@drawable/rect_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/divider" />

</android.support.constraint.ConstraintLayout>